--- a/assets/css/dropdown.css
+++ b/assets/css/dropdown.css
@@ -42,3 +42,10 @@
   border-right: 10px solid transparent;
   border-bottom: 10px solid #e54;
 }
+
+@media (max-width: 700px) {
+  [data-dropdown] .dropdown {
+    display: block;
+    animation: show-up 0.3s forwards;
+  }
+}
