--- a/assets/css/geral.css
+++ b/assets/css/geral.css
@@ -229,7 +229,7 @@ body {
   }
 
   .grid-section h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .menu {
@@ -287,17 +287,19 @@ body {
 }
 
 [data-set='accordion'] dt::after {
-  content: '￬';
-  width: 24px;
-  height: 24px;
+  content: '';
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  background: url('../img/arrow-red.svg') no-repeat center;
   margin-left: 10px;
+  transform: rotate(90deg);
+  transition: 0.3s;
 }
 
 [data-set='accordion'] dt.ativo::after {
-  content: '￪';
-  width: 24px;
-  height: 24px;
-  margin-left: 10px;
+  content: '';
+  transform: rotate(-90deg);
 }
 
 @keyframes slideDown {
@@ -354,4 +356,11 @@ body {
   padding: 0.2rem 0.5rem;
   font-weight: bold;
   border-radius: 2px;
+}
+
+.arrow-black {
+  background: url('../img/arrow-black.svg') no-repeat center;
+  display: inline-block;
+  width: 8px;
+  height: 10px;
 }
