--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -17,6 +17,9 @@
 
 .modal {
   background: #fff;
+  width: 80vw;
+  max-width: 600px;
+  box-sizing: border-box;
   padding: 40px;
   border: 10px solid #fb5;
   box-shadow: 0 0 0 10px #fff;
